<resources>
    <string name="app_name">CAB1</string>
    <string name="customer_login">CUSTOMER LOGIN</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password">PASSWORD..</string>
    <string name="email">EMAIL..</string>
    <string name="driver_login">DRIVER LOGIN</string>
<!--    <string name="email">EMAIL..</string>-->
<!--    <string name="password">PASSWORD..</string>-->
</resources>