<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loging"
    tools:context=".DriverLoginRegisterActivity">

    <TextView
        android:id="@+id/driver_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="139dp"
        android:text="@string/driver_login"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_background"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />


    <Button
        android:id="@+id/driver_login_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="203dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/driver_register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="157dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#3E2723"
        android:textSize="18sp" />

    <Button
        android:id="@+id/driver_register_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="131dp"
        android:layout_marginBottom="92dp"
        android:text="@string/register"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>